--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
@@ -17,7 +19,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "type": "module",
-    "typescript": "^5.3.2",
+    "typescript": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,7 +50,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC"
